--- a/src/components/MainPage.module.css
+++ b/src/components/MainPage.module.css
@@ -1,3 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap');
+
+
 .main_container{
-    color:black
-}
+ display: flex;
+ background: url(../img/stars.png);
+ background-color: black;
+ width: 100%;
+ height: 110vh;
+  }
+
+
+  .title{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 5%;
+    margin-left: 25%;
+    font-family: Rowdies;
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 400;
+  /* line-height: 119px; */
+  letter-spacing: 0em;
+  text-align: center;
+    color: #FE3B1F;
+    text-transform: capitalize;
+  }
+
+  .start-button button{
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 6%;
+   margin-left: 35%;
+    color: white;
+    background-color: #FE3B1F;
+    width: 250px;
+    height: 50px;
+    border-radius: 12px;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .submitted-button button{
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 4%;
+   margin-left: 38%;
+    color: white;
+    background-color: #FE3B1F;
+    width: 200px;
+    height: 50px;
+    border-radius: 12px;
+    align-items: center;
+    cursor: pointer;
+  }
+  .img img{
+    margin-top: -10%;
+    transform: rotate(10deg);
+  }
+
