--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,53 @@ code {
 .container{
   max-width: 1920;
 }
+
+
+.inputis-danger{
+  height: 32px;
+  font-size: 20px;
+  outline: none;
+  width: 100%;
+ 
+  margin-bottom: 10px;
+  border: 1px solid red
+}
+
+.inputis-success{
+  height: 32px;
+  font-size: 20px;
+  outline: none;
+  width: 100%;
+  margin-bottom: 10px;
+  border: 1px solid green
+}
+
+.control{
+  display: flex;
+  width: 100%;
+}
+.input{
+  width: 100%;
+  height: 32px;
+  font-size: 20px;
+  outline: none;
+  border:1px solid #525557;
+
+}
+
+.icon{
+  display: inline-block;
+  margin-left: -10%;
+  margin-top: 2.5%;
+  color: green;
+  font-size: 20px;
+}
+
+.icon-minus{
+  display: inline-block;
+  margin-left: -10%;
+  margin-top: 2.5%;
+  color: red;
+  font-size: 20px;
+}
+
